welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:71: error: not found: value initial
	while(getDirection() != initial)
                                ^